Fix HTML formatting and ensure proper structure

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav>
       <a href="#about" class="active">ABOUT ME</a>
       <a href="Anil Kumar Thiruveedhi_.pdf">RESUME</a>
-      <a href="https://anil-2005.github.io/Track-Your-Expense/">PROJECTS</a>
+      <a href="https://anil-2005.github.io/Track-Your-Expense/" target="_blank">PROJECTS</a>
       <a href="#contact">CONTACT</a>
     </nav>
     <div id="theme-toggle" title="Toggle theme">🌙</div>
@@ -98,5 +98,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
