--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <nav>
       <a href="#about" class="active">ABOUT ME</a>
-      <a href="Anil Kumar Thiruveedhi_.pdf">RESUME</a>
+      <a href="Anil Kumar Thiruveedhi_.pdf" target="_blank">RESUME</a>
       <a href="https://anil-2005.github.io/Track-Your-Expense/" target="_blank">PROJECTS</a>
       <a href="#contact">CONTACT</a>
     </nav>
@@ -30,44 +30,43 @@
 
   <main class="main-container">
     <div class="profile-card">
-      <img src="anil.jpg" alt="Anil Kumar" class="profile-pic" />
+      <img src="./anil.jpg" alt="Anil Kumar" class="profile-pic" />
       <h2>Anil Kumar<br />Thiruveedhi</h2>
       <div class="divider"></div>
       <p class="subtitle">FULL STACK .NET DEVELOPER</p>
       <div class="social-icons">
-        <a href="https://www.linkedin.com/in/anil-kumar-620b1b266?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.linkedin.com/in/anil-kumar-620b1b266" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="https://leetcode.com/u/Kgy0DhxO8K/" target="_blank" class="leetcode-link">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" 
-       alt="LeetCode" class="leetcode-icon" />
-</a>
-
-        <a href="#"><i class="fab fa-instagram"></i></a>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" 
+               alt="LeetCode" class="leetcode-icon" />
+        </a>
+        <a href="https://www.instagram.com/anil_kumar.1826" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
 
     <section class="about-section" id="about">
       <h1>Hello,</h1>
-        <h3>I'm Anil Kumar, an aspiring <strong>Full Stack .NET Developer</strong> passionate about building modern, efficient, and user-friendly web applications.</h3>
+      <h3>I'm Anil Kumar, an aspiring <strong>Full Stack .NET Developer</strong> passionate about building modern, efficient, and user-friendly web applications.</h3>
 
       <div class="buttons">
-        <a href="Anil Kumar Thiruveedhi_.pdf" class="btn active">RESUME</a>
-        <a href="https://anil-2005.github.io/Track-Your-Expense/" class="btn outline">PROJECTS</a>
+        <a href="Anil Kumar Thiruveedhi_.pdf" class="btn active" target="_blank">RESUME</a>
+        <a href="https://anil-2005.github.io/Track-Your-Expense/" class="btn outline" target="_blank">PROJECTS</a>
       </div>
-            <p>
+
+      <p>
         I’m a passionate <strong>Full Stack .NET Developer</strong> and 
         <strong>Computer Science student</strong> with strong skills in designing and developing 
         responsive web applications. I specialize in 
         <strong>C#, ASP.NET, HTML, CSS, JavaScript, and SQL</strong>, focusing on performance, 
         clean code, and usability.
-        </p>
-        <p>
+      </p>
+      <p>
         I also have a solid understanding of <strong>Object-Oriented Programming (OOP)</strong> principles, 
         which help me build efficient and scalable applications. I’m currently working on projects like 
         a real-time <strong>Expense Tracker Web App</strong> with CRUD operations, and I’m always 
         exploring new technologies to enhance my development skills.
-        </p>
-
+      </p>
     </section>
   </main>
 
@@ -78,19 +77,20 @@
     </div>
     <div class="footer-center">
       <strong>Call</strong><br />
-      +91 93916 39087
+      <a href="tel:+919876543210">+91 93916 39087</a>
     </div>
     <div class="footer-center">
       <strong>Write</strong><br />
-      thiruveedhianil@gmail.com
+      <a href="mailto:thiruveedhianil@gmail.com?subject=Portfolio Inquiry&body=Hello Anil, I saw your portfolio and wanted to reach out...">
+        thiruveedhianil@gmail.com
+      </a>
     </div>
     <div class="footer-right">
       <strong>Follow</strong><br />
       <div class="social-icons">
-        <!-- <a href="#"><i class="fab fa-facebook-f"></i></a> -->
         <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/in/anil-kumar-620b1b266?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://www.instagram.com/anil_kumar.1826?igsh=M3A4Zjl1YWdyOTl1"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/anil-kumar-620b1b266" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.instagram.com/anil_kumar.1826" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
   </footer>
@@ -98,6 +98,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
